Added Dialog to add todo including validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,7 @@
     <span>ToDo </span>
   </mat-toolbar>
 </div>
- <app-read-to-do></app-read-to-do>
+
+<div class="ToDoContainer">
+  <app-read-to-do></app-read-to-do>
+</div>
