--- a/src/app/read-to-do/read-to-do.component.html
+++ b/src/app/read-to-do/read-to-do.component.html
@@ -7,8 +7,9 @@
     {{task.name}}
   </mat-list-option>
 </mat-selection-list> -->
+<button mat-raised-button (click)="addTask()" id="btn_addNewTask">Add New Task</button>
 
-<table class="table">
+  <table class="table">
   <thead>
   <tr>
     <th>Name</th>
@@ -22,8 +23,3 @@
   </tr>
 </tbody>
 </table>
-
-<!--
-<p>
-  Options selected: {{shoes.selectedOptions.selected.length}}
-</p> -->
