ACompleted Read Data in NGXS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
-<div>
-  <mat-toolbar color="primary">
-    <span id="navbarIcon">
-      <mat-icon>home</mat-icon>
-    </span>
-    <span>ToDo </span>
-  </mat-toolbar>
+
+<div class="container">
+  <div>
+    <mat-toolbar color="primary">
+      <span id="navbarIcon">
+        <mat-icon>home</mat-icon>
+      </span>
+      <span>ToDo </span>
+    </mat-toolbar>
+  </div>
+
+  <div class="ToDoContainer">
+    <app-read-to-do></app-read-to-do>
+  </div>
 </div>
 
-<div class="ToDoContainer">
-  <app-read-to-do></app-read-to-do>
-</div>
