--- a/src/app/read-to-do/read-to-do.component.html
+++ b/src/app/read-to-do/read-to-do.component.html
@@ -1,25 +1,29 @@
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!-- <mat-selection-list #tasks>
-  <mat-list-option *ngFor="let task of tasks$|async">
-    {{task.name}}
-  </mat-list-option>
-</mat-selection-list> -->
 <button mat-raised-button (click)="addTask()" id="btn_addNewTask">Add New Task</button>
 
-  <table class="table">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Completed</th>
-  </tr>
-</thead>
-<tbody>
-  <tr *ngFor="let task of tasks$|async">
-    <td>{{task.name}}</td>
-    <td>{{task.completed}}</td>
-  </tr>
-</tbody>
+
+<table mat-table [dataSource]="tasks" class="mat-elevation-z8" id="toDoTable">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="completed">
+    <th mat-header-cell *matHeaderCellDef> Completed </th>
+    <td mat-cell *matCellDef="let element">
+      <mat-checkbox [checked]="element.completed"> </mat-checkbox>
+    </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
