--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,12 @@
 .ToDoContainer{
   margin-top: 10px;
 }
+.container{
+  padding: 0%;
+  margin:0%;
+  width: 100%;
+}
+body {
+  margin: 0px;
+  padding: 0px;
+}
