Added Delete, Update, Sorting, and Pagination

--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -12,6 +12,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button type="submit" (click)="onSubmit()">Save</button>
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-raised-button color="primary"type="submit" (click)="onSubmit()">Save</button>
+  <button mat-raised-button mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
