--- a/src/app/read-to-do/read-to-do.component.html
+++ b/src/app/read-to-do/read-to-do.component.html
@@ -1,8 +1,9 @@
 
+<div class="mat-elevation-z8">
 <button mat-raised-button (click)="addTask()" id="btn_addNewTask">Add New Task</button>
 
 
-<table mat-table [dataSource]="tasks" class="mat-elevation-z8" id="toDoTable">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" id="toDoTable">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -10,15 +11,30 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header>Title</th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="completed">
-    <th mat-header-cell *matHeaderCellDef> Completed </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Completed </th>
     <td mat-cell *matCellDef="let element">
       <mat-checkbox [checked]="element.completed"> </mat-checkbox>
+    </td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell  *matHeaderCellDef >Update</th>
+    <td mat-cell *matCellDef="let element" >
+         <button mat-raised-button (click)="onUpdate(element)">Edit</button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>Delete  </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-raised-button color="warn" (click)="onDelete(element.id)">Delete</button>
+      <!-- <mat-checkbox [checked]="element.id"> </mat-checkbox> -->
     </td>
   </ng-container>
 
@@ -26,4 +42,8 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
+<mat-paginator [pageSizeOptions]="[5, 10, 20]"
+showFirstLastButtons
+aria-label="Select page of periodic elements">
+</mat-paginator>
+</div>
