--- a/src/app/read-to-do/read-to-do.component.html
+++ b/src/app/read-to-do/read-to-do.component.html
@@ -10,15 +10,15 @@
 
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef  mat-sort-header>Title</th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
   </ng-container>
 
   <ng-container matColumnDef="completed">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Completed </th>
     <td mat-cell *matCellDef="let element">
-      <mat-checkbox [checked]="element.completed"> </mat-checkbox>
+      <mat-checkbox [checked]="element.completed" (change)="onCompleted(element)"> </mat-checkbox>
     </td>
   </ng-container>
 
@@ -30,11 +30,17 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="details">
+    <th mat-header-cell  *matHeaderCellDef >Details</th>
+    <td mat-cell *matCellDef="let element" >
+         <button mat-raised-button color="primary" (click)="onDetails(element.id)">Details</button>
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>Delete  </th>
     <td mat-cell *matCellDef="let element">
       <button mat-raised-button color="warn" (click)="onDelete(element.id)">Delete</button>
-      <!-- <mat-checkbox [checked]="element.id"> </mat-checkbox> -->
     </td>
   </ng-container>
 
