--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -11,9 +11,9 @@
   <br />
   <div class="actionsContainer">
     <button mat-raised-button color="primary" type="submit" (click)="onCancel()">Save</button>
-    <button mat-raised-button mat-dialog-close class="btn" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button class="btn" (click)="onCancel()">Cancel</button>
   </div>
 </div>
 <ng-template #spinner_gif>
-  <mat-spinner></mat-spinner>
+  <mat-spinner class="centerSpinner"></mat-spinner>
 </ng-template>
