--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+body {
+  margin: 0px;
+  padding: 0px;
+}
+.full-width{
+  width: 100%;
+}
+
+.centerSpinner{
+  margin:0 auto;
+}
